Fixed spacing and alignment in the help section

--- a/src/components/IndexedDB/styles.module.scss
+++ b/src/components/IndexedDB/styles.module.scss
@@ -96,8 +96,9 @@
 
 .pillContainer {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    gap: 0.5rem;
+    gap: 0.25rem;
     padding: 0;
     list-style-type: none;
 }
